# pyhar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  adapters-and-mcp.md  components.md  concepts.md  cookbook.md  models.md  tuning.md
examples/: async_agent.py  bench_demo.py  memory_and_state.py  minimal_loop.py  model_routing.py  permissions_and_tracing.py  react_agent.py  real_model.py  streaming.py  tune_harness.py
src/pyhar/: __init__.py  bench.py  checks.py  config.py  mcp.py  optimize.py  presets.py  registry.py  subagent.py
src/pyhar/adapters/: __init__.py  langgraph.py  manual.py  openai_agents.py
src/pyhar/components/: __init__.py  budget.py  compactor.py  context_builder.py  loop_guard.py  memory.py  permissions.py  state_artifact.py  tool_budget.py  tracer.py  verifier.py
src/pyhar/core/: __init__.py  async_harness.py  component.py  harness.py  model.py  state.py  tool.py
src/pyhar/models/: __init__.py  anthropic.py  combinators.py  echo.py  ollama.py  openai.py  pricing.py
tests/: test_adapters_mcp.py  test_components.py  test_core.py  test_enhancements.py  test_langgraph_integration.py  test_models.py  test_new_components.py  test_optimize.py  test_v030.py  test_v040.py
