[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name is `pyhar-agents`; the import package is `pyhar`
# (`pip install pyhar-agents` -> `import pyhar`).
name = "pyhar-agents"
version = "0.2.0"
description = "Composable primitives for agent harnesses — the swappable parts every agent's harness re-implements by hand."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chaoyue" }]
keywords = ["llm", "agents", "harness", "context-engineering", "compaction", "verification", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []  # zero required runtime deps — bring your own model & tools

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/ChaoYue0307/pyhar"
Repository = "https://github.com/ChaoYue0307/pyhar"
Changelog = "https://github.com/ChaoYue0307/pyhar/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyhar = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are handled case-by-case

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
